--- a/xaml/Controls/Tabs.xaml
+++ b/xaml/Controls/Tabs.xaml
@@ -5,8 +5,7 @@
                 <TabItem.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" >
-                            <TextBlock Text="📦"  FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                            <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5,0,0"/>
+                            <TextBlock Text="📦" ToolTip="{Binding}"  FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </DataTemplate>
             </TabItem.HeaderTemplate>
@@ -37,8 +36,7 @@
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="🛠"  VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
-                                <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  TextWrapping="Wrap" Margin="0,5,0,0"/>
+                                <TextBlock Text="🛠" ToolTip="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
                             </StackPanel>
                         </DataTemplate>
                 </TabItem.HeaderTemplate>
@@ -64,8 +62,7 @@
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
-                                <TextBlock Text="⚙" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
-                                <TextBlock Text="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5,0,0"/>
+                                <TextBlock Text="⚙" ToolTip="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
                             </StackPanel>
                         </DataTemplate>
                 </TabItem.HeaderTemplate>
