--- a/xaml/Controls/Tabs.xaml
+++ b/xaml/Controls/Tabs.xaml
@@ -1,14 +1,6 @@
 <!--TabControl-->
-    <TabControl Name="taps" TabStripPlacement="Left" Grid.Row="1" BorderBrush="Transparent" Foreground="White" Background="Transparent">
-
-            <TabItem Name="apps" Header="{Binding apps, TargetNullValue=Apps}" BorderBrush="{x:Null}" >
-                <TabItem.HeaderTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Vertical" >
-                            <TextBlock Text="📦" ToolTip="{Binding}"  FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        </StackPanel>
-                    </DataTemplate>
-            </TabItem.HeaderTemplate>
+    <TabControl Name="taps" TabStripPlacement="Left" Grid.Row="1" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="{x:Null}">
+            <TabItem Name="apps" Header="📦" ToolTip="{Binding apps, TargetNullValue=Apps}" FontSize="18" BorderBrush="{x:Null}" >
                 <ListView Name="appslist" 
                     Grid.Row="1" 
                     BorderBrush="{x:Null}" 
@@ -19,27 +11,16 @@
                     VirtualizingStackPanel.IsVirtualizing="True"
                     VirtualizingStackPanel.VirtualizationMode="Recycling"
                     ScrollViewer.CanContentScroll="True">
-    
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <VirtualizingStackPanel />
                         </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
-
                     {{Apps}}
-                
                 </ListView>
-
             </TabItem>
 
-            <TabItem x:Name="tweeksTab" Header="{Binding tweaks, TargetNullValue=Tweaks}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <TabItem.HeaderTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Vertical">
-                                <TextBlock Text="🛠" ToolTip="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
-                            </StackPanel>
-                        </DataTemplate>
-                </TabItem.HeaderTemplate>
+            <TabItem x:Name="tweeksTab" Header="🛠" ToolTip="{Binding tweaks, TargetNullValue=Tweaks}"  FontSize="18" BorderBrush="{x:Null}" Background="{x:Null}">
                    <ListView Name="tweakslist" 
                         BorderBrush="{x:Null}" 
                         Background="{x:Null}"
@@ -58,14 +39,7 @@
                     </ListView>
             </TabItem>
 
-            <TabItem x:Name="SettingsTab" Header="{Binding settings, TargetNullValue=Settings}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <TabItem.HeaderTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Vertical">
-                                <TextBlock Text="⚙" ToolTip="{Binding}" VerticalAlignment="Center" HorizontalAlignment="Center"  FontSize="18"/>
-                            </StackPanel>
-                        </DataTemplate>
-                </TabItem.HeaderTemplate>
+            <TabItem x:Name="SettingsTab" Header="⚙" ToolTip="{Binding settings, TargetNullValue=Settings}" FontSize="18" BorderBrush="{x:Null}" Background="{x:Null}">
                     <ListView Name="SettingsList" 
                         BorderBrush="{x:Null}" 
                         Background="{x:Null}"
@@ -83,6 +57,5 @@
                         {{Settings}}
                     </ListView>
             </TabItem>
-
     </TabControl>
 <!--End TabControl-->
