--- a/themes/Palestine.xaml
+++ b/themes/Palestine.xaml
@@ -17,8 +17,8 @@
 <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
 <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
 <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
-<Color x:Key="ListViewCardLeftColor">#D82C211A</Color> 
-<Color x:Key="ListViewCardRightColor">#D82C211A</Color>
+<SolidColorBrush x:Key="itemColor1" Color="#2C211A"/>
+<SolidColorBrush x:Key="itemColor2" Color="#2C212D"/>
 <SolidColorBrush x:Key="logo" Color="red"/>
 <ImageBrush x:Key="BackgroundImage" ImageSource="https://w.wallhaven.cc/full/we/wallhaven-wegrj6.jpg" Stretch="UniformToFill"/>
 <x:String x:Key="SubText">#StandWithPalestine</x:String>
