--- a/themes/DarkKnight.xaml
+++ b/themes/DarkKnight.xaml
@@ -17,8 +17,8 @@
 <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
 <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
 <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
-<Color x:Key="ListViewCardLeftColor">#E117181D</Color> 
-<Color x:Key="ListViewCardRightColor">#E117181D</Color>
+<SolidColorBrush x:Key="itemColor1" Color="#17183D"/>
+<SolidColorBrush x:Key="itemColor2" Color="#17182D"/>
 <SolidColorBrush x:Key="logo" Color="CornflowerBlue"/>
 <ImageBrush x:Key="BackgroundImage" ImageSource="https://images.hdqwalls.com/wallpapers/the-batman-fan-made-4k-xx.jpg" Stretch="UniformToFill"/>
 <x:String x:Key="SubText">I am not a hero</x:String>
