--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -79,10 +79,10 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="ItemsControl.AlternationIndex" Value="0">
-                <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundColor}" />
+                <Setter Property="Background" Value="{DynamicResource itemColor1}" />
             </Trigger>
             <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                <Setter Property="Background" Value="{DynamicResource SecondaryPrimaryBackgroundColor}" />
+                <Setter Property="Background" Value="{DynamicResource itemColor2}" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -93,16 +93,16 @@
         <Setter Property="Foreground" Value="{DynamicResource TextColorSecondaryColor}"/>
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="6"/>
-        <Setter Property="BorderThickness" Value="1.2"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource TextColorSecondaryColor}"/>
+        <Setter Property="BorderThickness" Value="1.5"/>
+        <Setter Property="BorderBrush" Value="DarkGray"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
                     <StackPanel Orientation="Horizontal">
                         <!-- Checkbox box -->
-                        <Border Name="CheckRadius" Width="15" Height="15" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="2" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                        <Border Name="CheckRadius" Width="16" Height="16" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="2" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
                             <!-- Checkmark arrow inside the box -->
-                            <Path x:Name="CheckMark" Width="13" Height="13" Stretch="Uniform" Stroke="WhiteSmoke" StrokeThickness="3.2" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed"/>
+                            <Path x:Name="CheckMark" Width="13" Height="13" Stretch="Uniform" Stroke="WhiteSmoke" StrokeThickness="2.6" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed"/>
                         </Border>
                         <!-- Content beside the checkbox -->
                         <ContentPresenter Margin="8 0 0 0" VerticalAlignment="Center"/>
