--- a/themes/Dark.xaml
+++ b/themes/Dark.xaml
@@ -1,27 +1,37 @@
 <!-- {Dark} -->
 <!-- by {emadadel} -->
 <ResourceDictionary x:Key="Dark">
-<SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#2b2d31"/>
-<SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#3c3f40"/>
-<SolidColorBrush x:Key="PrimaryButtonForeground" Color="#098fd4" />
-<SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
-<SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
-<SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
-<SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#bbbbbb"/>
-<SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
-<SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
-<SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
-<SolidColorBrush x:Key="HighlightColor" Color="CornflowerBlue"/>
-<SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
-<SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
-<SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
-<Color x:Key="ListViewCardLeftColor">#3c3f44</Color> 
-<SolidColorBrush x:Key="itemColor1" Color="#3c3f40"/>
-<SolidColorBrush x:Key="itemColor2" Color="#3c3f45"/>
-<SolidColorBrush x:Key="logo" Color="CornflowerBlue"/>
-<ImageBrush x:Key="BackgroundImage" ImageSource="{x:Null}" Stretch="UniformToFill"/>
-<x:String x:Key="SubText">Install Tweaks Tool</x:String>
+    <!-- Backgrounds -->
+    <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#22272e"/>
+    <SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#2d333b"/>
+    <SolidColorBrush x:Key="itemColor1" Color="#2d333b"/>
+    <SolidColorBrush x:Key="itemColor2" Color="#333942"/>
+
+    <!-- Text -->
+    <SolidColorBrush x:Key="TextColorPrimary" Color="#adbac7"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor" Color="#cdd9e5"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#768390"/>
+    
+    <!-- Buttons and Highlights -->
+    <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#539bf5"/>
+    <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="#539bf5"/>
+    <SolidColorBrush x:Key="ButtonBorderColor" Color="#539bf5"/>
+    <SolidColorBrush x:Key="HighlightColor" Color="#316dca"/>
+
+    <!-- Borders and Lines -->
+    <SolidColorBrush x:Key="BorderBrush" Color="#444c56"/>
+    <SolidColorBrush x:Key="Label" Color="#373e47"/>
+
+    <!-- Toggle Switch -->
+    <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#373e47"/>
+    <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#22272e"/>
+    <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
+    <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#768390"/>
+    <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#444c56"/>
+
+    <!-- Misc -->
+    <SolidColorBrush x:Key="logo" Color="#539bf5"/>
+    <Color x:Key="ListViewCardLeftColor">#2d333b</Color>
+    <ImageBrush x:Key="BackgroundImage" ImageSource="{x:Null}" Stretch="UniformToFill"/>
+    <x:String x:Key="SubText">Install Tweaks Tool</x:String>
 </ResourceDictionary>
-<!--{Dark}-->
