--- a/themes/DarkKnight.xaml
+++ b/themes/DarkKnight.xaml
@@ -1,26 +1,40 @@
 <!-- {Dark Knight} -->
-<!-- by {Emad Adel} -->
+<!-- by {emadadel} -->
 <ResourceDictionary x:Key="DarkKnight">
-<SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#081015"/>
-<SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#17181D"/>
-<SolidColorBrush x:Key="PrimaryButtonForeground" Color="#004D69" />
-<SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
-<SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
-<SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
-<SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#bbbbbb"/>
-<SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
-<SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
-<SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
-<SolidColorBrush x:Key="HighlightColor" Color="CornflowerBlue"/>
-<SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
-<SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
-<SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
-<SolidColorBrush x:Key="itemColor1" Color="#17183D"/>
-<SolidColorBrush x:Key="itemColor2" Color="#17182D"/>
-<SolidColorBrush x:Key="logo" Color="CornflowerBlue"/>
-<ImageBrush x:Key="BackgroundImage" ImageSource="https://images.hdqwalls.com/wallpapers/the-batman-fan-made-4k-xx.jpg" Stretch="UniformToFill"/>
-<x:String x:Key="SubText">I am not a hero</x:String>
+
+    <!-- Backgrounds -->
+    <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#0a0a0a"/>
+    <SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#121212"/>
+
+    <!-- Text -->
+    <SolidColorBrush x:Key="TextColorPrimary" Color="#e6e6e6"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor" Color="#cccccc"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#999999"/>
+
+    <!-- Buttons and Highlights -->
+    <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#00b7ff"/>
+    <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="#00b7ff"/> 
+    <SolidColorBrush x:Key="ButtonBorderColor" Color="#ff0000"/>
+    <SolidColorBrush x:Key="HighlightColor" Color="#00b7ff"/>     
+
+    <!-- Borders and Labels -->
+    <SolidColorBrush x:Key="BorderBrush" Color="#1c1c1c"/>
+    <SolidColorBrush x:Key="Label" Color="#2a2a2a"/>
+
+    <!-- Toggle Switch -->
+    <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#1a1a1a"/>
+    <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#0f0f0f"/>
+    <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/> 
+    <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#666666"/>
+    <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#444444"/>
+
+    <!-- ListView -->
+    <SolidColorBrush x:Key="itemColor1" Color="#141414"/>
+    <SolidColorBrush x:Key="itemColor2" Color="#1c1c1c"/>
+
+    <!-- Misc -->
+    <SolidColorBrush x:Key="logo" Color="#00b7ff"/> 
+    <ImageBrush x:Key="BackgroundImage" ImageSource="https://images.hdqwalls.com/wallpapers/the-batman-fan-made-4k-xx.jpg" Stretch="UniformToFill" />
+    <x:String x:Key="SubText">I am not a hero</x:String>
+
 </ResourceDictionary>
-<!-- Name {Dark Knight} -->
