--- a/themes/Palestine.xaml
+++ b/themes/Palestine.xaml
@@ -1,26 +1,40 @@
 <!-- {Palestine} -->
 <!-- by {emadadel} -->
 <ResourceDictionary x:Key="Palestine">
-<SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#FF1F1F1F"/>
-<SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#2C211A"/>
-<SolidColorBrush x:Key="PrimaryButtonForeground" Color="#FFB80000" />
-<SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
-<SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
-<SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
-<SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#bbbbbb"/>
-<SolidColorBrush x:Key="BorderBrush" Color="#2b2d31" />
-<SolidColorBrush x:Key="ButtonBorderColor" Color="#1DB954"/>
-<SolidColorBrush x:Key="Label" Color="#3f3f3f"/>
-<SolidColorBrush x:Key="HighlightColor" Color="#FFD10D0D"/>
-<SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#282828"/>
-<SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="white"/>
-<SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#c9c9c7"/>
-<SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#c9c9c7"/>
-<SolidColorBrush x:Key="itemColor1" Color="#2C211A"/>
-<SolidColorBrush x:Key="itemColor2" Color="#2C212D"/>
-<SolidColorBrush x:Key="logo" Color="red"/>
-<ImageBrush x:Key="BackgroundImage" ImageSource="https://w.wallhaven.cc/full/we/wallhaven-wegrj6.jpg" Stretch="UniformToFill"/>
-<x:String x:Key="SubText">#StandWithPalestine</x:String>
+
+    <!-- Backgrounds -->
+    <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#111111"/>
+    <SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#1c1c1c"/>
+
+    <!-- Text -->
+    <SolidColorBrush x:Key="TextColorPrimary" Color="#F5F5F5"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor" Color="#CCCCCC"/>
+    <SolidColorBrush x:Key="TextColorSecondaryColor2" Color="#888888"/>
+
+    <!-- Buttons and Highlights -->
+    <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#D70000"/>
+    <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="#FFFFFF"/>
+    <SolidColorBrush x:Key="ButtonBorderColor" Color="#007A3D"/>
+
+    <!-- Borders and Labels -->
+    <SolidColorBrush x:Key="BorderBrush" Color="#2a2a2a"/>
+    <SolidColorBrush x:Key="Label" Color="#444444"/>
+    <SolidColorBrush x:Key="HighlightColor" Color="#D70000"/>
+
+    <!-- Toggle Switch -->
+    <SolidColorBrush x:Key="ToggleSwitchBackgroundColor" Color="#202020"/>
+    <SolidColorBrush x:Key="ToggleSwitchForegroundColor" Color="#2b2b2b"/>
+    <SolidColorBrush x:Key="ToggleSwitchEnableColor" Color="#007A3D"/>
+    <SolidColorBrush x:Key="ToggleSwitchDisableColor" Color="#555555"/>
+    <SolidColorBrush x:Key="ToggleSwitchBorderBrush" Color="#777777"/>
+
+    <!-- ListView -->
+    <SolidColorBrush x:Key="itemColor1" Color="#161616"/>
+    <SolidColorBrush x:Key="itemColor2" Color="#1f1f1f"/>
+
+    <!-- Misc -->
+    <SolidColorBrush x:Key="logo" Color="#D70000"/> <!-- Strong red logo -->
+    <ImageBrush x:Key="BackgroundImage" ImageSource="https://w.wallhaven.cc/full/we/wallhaven-wegrj6.jpg" Stretch="UniformToFill" Opacity="0.4"/>
+    <x:String x:Key="SubText">#StandWithPalestine</x:String>
+
 </ResourceDictionary>
-<!-- Name {Palestine} -->
