--- a/themes/Dark.xaml
+++ b/themes/Dark.xaml
@@ -15,7 +15,7 @@
     <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#539bf5"/>
     <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="#539bf5"/>
     <SolidColorBrush x:Key="ButtonBorderColor" Color="#539bf5"/>
-    <SolidColorBrush x:Key="HighlightColor" Color="#316dca"/>
+    <SolidColorBrush x:Key="HighlightColor" Color="#539bf5"/>
 
     <!-- Borders and Labels -->
     <SolidColorBrush x:Key="BorderBrush" Color="#444c56"/>
