--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -102,10 +102,10 @@
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
                     <StackPanel Orientation="Horizontal">
-                        <Border Name="CheckRadius" Width="30" Height="30" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                        <Border Name="CheckRadius" Width="28" Height="28" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="4" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
                             <Grid>
-                                <TextBlock x:Name="CheckIcon" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" />
-                                <Path x:Name="CheckMark" Width="18" Height="18" Stretch="Uniform" Stroke="White" StrokeThickness="3" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock x:Name="CheckIcon" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" />
+                                <Path x:Name="CheckMark" Width="Auto" Margin="5" Height="Auto" Stretch="Uniform" Stroke="White" StrokeThickness="2" Data="M 0 5 L 4 8 L 10 0" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Grid>
                         </Border>
                         <ContentPresenter Margin="8 0 0 0" VerticalAlignment="Center"/>
@@ -113,14 +113,15 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter TargetName="CheckMark" Property="Visibility" Value="Visible"/>
-                            <Setter Property="Background" Value="{DynamicResource HighlightColor}"/>
+                            <Setter Property="Background" Value="{DynamicResource PrimaryButtonForeground}"/>
+                            <Setter TargetName="CheckIcon" Property="Visibility" Value="Hidden"/>
                         </Trigger>
                         <Trigger Property="IsChecked" Value="False">
-                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="Background" Value="{DynamicResource PrimaryButtonForeground}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Background" Value="{DynamicResource HighlightColor}"/>
-                            <Setter Property="BorderBrush" Value="{DynamicResource HighlightColor}"/>
+                            <Setter Property="Cursor" Value="Hand"/>
                         </Trigger>
 
                         <!-- DataTrigger based on the selected tab header -->
@@ -184,7 +185,7 @@
 
 <!--TextBlock Style-->
     <Style TargetType="TextBlock">
-        <Setter Property="Foreground" Value="{DynamicResource TextColorPrimary}"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextColorSecondaryColor}"/>
         <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType" />
     </Style>
